bk_ida/gccida/c3/gen_lowpart
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart/src/emit-rtl.c:1624:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_lowpart( machine_mode mode, rtx x) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart/src/emit-rtl.c:1640:19: error: use of undeclared identifier 'machine_mode'
v2 = force_reg( ( machine_mode)BYTE2( v4), v2); 
                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart/src/obj/emit-rtl.o] Error 1
